--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "register-easy",
+  "name": "registro",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href /register-easy/ && copy docs\\index.html docs\\404.html",
+    "build": "ng build --base-href /registro/ && copy docs\\index.html docs\\404.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
